# apps_validation

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docker_image.yml  lint.yml  mypy.yml  tests.yml
apps_ci/: git.py  images_info.py  version_bump.py
apps_ci/scripts/: bump_version.py  catalog_update.py
apps_exceptions/: exceptions.py
apps_schema/: __init__.py  variable.py
apps_schema/attrs/: __init__.py  array.py  base.py  dictionary.py  string.py  utils.py
apps_schema/features/: acl.py  base.py  basic.py  certificate.py  container_image.py  interface.py  ix_volume.py  node.py  utils.py
apps_validation/: app_version.py  ix_values.py  json_schema_utils.py  portals.py  scale_version.py  utils.py  validate_app.py  validate_app_rename_migrations.py  validate_app_version.py  validate_catalog.py  validate_deprecated_apps_file.py  validate_dev_directory.py  validate_k8s_to_docker_migration.py  validate_migrations.py  validate_questions.py  validate_recommended_apps.py  validate_templates.py  validate_train.py
apps_validation/catalog_reader/: app.py  catalog.py  dev_directory.py  git.py  names.py  questions.py  questions_util.py  train_utils.py
apps_validation/ci/: git.py  names.py
catalog_reader/: app.py  app_utils.py  catalog.py  custom_app.py  dev_directory.py  git.py  hash_utils.py  library.py  names.py  questions.py  questions_util.py  recommended_apps.py  supported_version.py  train_utils.py  version_bump.py
catalog_templating/: render.py  utils.py
debian/: changelog  control  rules
(+65 files in other folders)
